<resources>
    <string name="app_name">CallJack</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
      AIzaSyAT6m-uh4_D9zjMAtLcDkmRz18hWPDaKm0
    </string>
    <!--<string name="google_app_id">490936590175</string>-->
    <string name="login_forgot_password"><u>Forgot your password?</u></string>
    <string name="open"></string>
    <string name="close"></string>
    <string name="title_activity_maps">Map</string>
    <string name="hint">This is just an estimate. Actual fares may vary slightly based on traffic or discount.</string>

    <string name="code_sent_content_1">Four digit code sent to your email/mobile number. This code is valid for next 2 hours.</string>
    <string name="code_sent_content_2">Once you receive your code, please enter in the section below.</string>
    <string name="code_sent_content_3">You can contact us at +91-XXXXX-XXXXX or by email.</string>
    <string name="rs">`</string>

    <string name="resend_content">Four digit code sent to your email/mobile number. This code is valid for next 2 hours.</string>
    <string name="resend_content_1">You can contact us at +91-XXXXX-XXXXX.</string>

    <string name="forgotpassword"><u>Forgot Your Password?</u></string>
    <string name="forgotpassword1">Forgot Password?</string>
    <string name="changepassword">Change Password</string>
    <string name="codesendcontent1">Four digit code sent to your email/mobile. This code is valid for next 2 hours.</string>
    <string name="codesendcontent2">Once you receive your code, please enter in the section below.</string>
    <string name="newpassword">Enter New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="confirmpasswordcontent1">Please enter a new password below.</string>
    <string name="confirmpasswordcontent2">Your password must be at least 6 characters</string>
    <string name="submit">Submit</string>

    <string name="forgotcontent1">To reset your password, Enter your registered email address or mobile number.</string>
    <string name="forgotcontent2">You will receive an email or SMS with a four digit code to reset your password shortly. Be sure to check your junk folder if you don\'t receive in 10 minutes.</string>
    <string name="forgotcontent3">You can always contact us at +91-xxxxx-xxxxx or by email.</string>
    <string name="mobile">Mobile Number / Email</string>
    <string name="bin">Enter OTP</string>
    <string name="codesend">Code Sent</string>
    <string name="resend"><u>Resend</u></string>
    <string name="refer_friends">Gift your friends Rs.100 by inviting them to join you at Call Jack</string>
    <string name="refer_friends1">You got Rs.100 too once they take their first ride.</string>
    <string name="refer_friends2">Share the promo code below</string>

    <string-array name="payment_by">
        <item>Sender</item>
        <item>Receiver</item>
    </string-array>
    <string name="courier_restriction_content">I hereby agree that I am not sending any item not approved by CallJack such as Drugs, Cash, Jewellery and other valuable items etc. I also agree CallJack is not responsible if I do send the restricted item.</string>

    //-------------paytm strings-------------
    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
    <string name="industry_type_id">Industry Type Id : </string>
    <string name="website">Website : </string>
    <string name="theme">Theme : </string>
    <string name="cust_email_id">Email Id : </string>
    <string name="cust_mobile_no">Mobile Number : </string>
    <string name="merchant_id">Merchant Id : </string>
    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sample_order_id">ORDER</string>
    <string name="sample_customer_id">CUST23657</string>
    <string name="sample_transaction_amount">1</string>
    <string name="sample_channel_id">WAP</string>
    <string name="sample_industry_type_id">Retail</string>
    <string name="sample_website">worldpressplg</string>
    <string name="sample_theme">merchant</string>
    <string name="sample_cust_email_id">abc@gmail.com</string>
    <string name="sample_cust_mobile_no">123</string>
    <string name="sample_merchant_id_staging">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
</resources>
