<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ColorGrayLight"
        android:gravity="center"
        android:text="@string/codesend"
        android:textColor="@color/ColorBlack"
        android:textSize="@dimen/contentSizeLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/textView_Normal"
                android:text="@string/codesendcontent1"
                android:textSize="@dimen/contentSizeSmall" />

            <TextView
                style="@style/textView_Normal"
                android:layout_marginTop="20dp"
                android:text="@string/codesendcontent2"
                android:textSize="@dimen/contentSizeSmall" />

            <TextView
                style="@style/textView_Normal"
                android:layout_marginTop="20dp"
                android:text="@string/forgotcontent3"
                android:textSize="@dimen/contentSizeSmall"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout style="@style/inputTextView">

                <EditText
                    android:id="@+id/otpEditText"
                    style="@style/editText"
                    android:drawableLeft="@drawable/mobile_icon"
                    android:drawablePadding="25dp"
                    android:hint="@string/bin"
                    android:maxLength="4"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/codeConirmationButton"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/otpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/button_background"
                android:text="@string/submit"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/reSendTextView"
                style="@style/textView_Normal"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:text="@string/resend"
                android:textSize="@dimen/contentSizeSmall" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>