<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ColorGrayLight"
        android:gravity="center"
        android:text="@string/changepassword"
        android:textColor="@color/ColorBlack"
        android:textSize="@dimen/contentSizeLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/textView_Normal"
                android:text="@string/confirmpasswordcontent1"
                android:textSize="@dimen/contentSizeSmall" />

            <TextView
                style="@style/textView_Normal"
                android:layout_marginTop="20dp"
                android:text="@string/confirmpasswordcontent2"
                android:textSize="@dimen/contentSizeSmall" />

            <android.support.design.widget.TextInputLayout style="@style/inputTextView">

                <EditText
                    android:id="@+id/newPasswordEditText"
                    style="@style/editText"
                    android:drawableLeft="@drawable/mobile_icon"
                    android:drawablePadding="25dp"
                    android:hint="@string/newpassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/inputTextView">

                <EditText
                    android:id="@+id/confirmNewPasswordEditText"
                    style="@style/editText"
                    android:drawableLeft="@drawable/mobile_icon"
                    android:drawablePadding="25dp"
                    android:hint="@string/confirmpassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:text="@string/submit"
                android:theme="@style/button_style" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>