<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ColorGrayLight"
        android:gravity="center"
        android:text="@string/forgotpassword1"
        android:textColor="@color/ColorBlack"
        android:textSize="@dimen/contentSizeLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/textView_Normal"
                android:text="@string/forgotcontent1"
                android:textSize="@dimen/contentSizeSmall" />

            <TextView
                style="@style/textView_Normal"
                android:layout_marginTop="20dp"
                android:text="@string/forgotcontent2"
                android:textSize="@dimen/contentSizeSmall" />

            <TextView
                style="@style/textView_Normal"
                android:layout_marginTop="20dp"
                android:text="@string/forgotcontent3"
                android:textSize="@dimen/contentSizeSmall"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout style="@style/inputTextView">

                <EditText
                    android:id="@+id/userNameEditText"
                    style="@style/editText"
                    android:drawableLeft="@drawable/mobile_icon"
                    android:drawablePadding="25dp"
                    android:hint="@string/mobile" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/forgotButton"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:theme="@style/button_style" />

            <SeekBar
                android:id="@+id/myseek"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:max="100"
                android:progressDrawable="@android:color/transparent"
                android:thumb="@drawable/cancel_icon"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>